--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^8.0",
         "laravel/framework": "^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^7.8",
-        "jenssegers/agent": "2.6.*"
+        "mobiledetect/mobiledetectlib": "^4.8.00"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5|^10.0|^11.0",
